--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lazrev</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="main">
-        <div id="page1"></div>
+        <div id="page1">
+            <h1>AI & ML PROJECT</h1>
+            <h1>DESIGN AGENCY</h1>
+        </div>
         <div id="page2"></div>
     </div>
 
