--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -89,6 +89,28 @@
                 <h4>and</h4>
                 <h4>digital product design</h4>
             </div>
+            <div id="moving-div">
+                <div class="move">
+                    <img src="https://lazarev.kiev.ua/la24/forbes.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/adweek.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/pmi.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/wf.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/fwa.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/awww.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/rd.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/webby.svg" alt="">
+                </div>
+                <div class="move">
+                    <img src="https://lazarev.kiev.ua/la24/forbes.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/adweek.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/pmi.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/wf.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/fwa.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/awww.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/rd.svg" alt="">
+                    <img src="https://lazarev.kiev.ua/la24/webby.svg" alt="">
+                </div>
+            </div>
         </div>
         <div id="page2"></div>
     </div>
