--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -90,6 +90,7 @@
                 <h4>digital product design</h4>
             </div>
             <div id="moving-div">
+                <div id="left-blur"></div>
                 <div class="move">
                     <img src="https://lazarev.kiev.ua/la24/forbes.svg" alt="">
                     <img src="https://lazarev.kiev.ua/la24/adweek.svg" alt="">
@@ -110,6 +111,7 @@
                     <img src="https://lazarev.kiev.ua/la24/rd.svg" alt="">
                     <img src="https://lazarev.kiev.ua/la24/webby.svg" alt="">
                 </div>
+                <div id="right-blur"></div>
             </div>
         </div>
         <div id="page2"></div>
