--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -114,7 +114,10 @@
                 <div id="right-blur"></div>
             </div>
         </div>
-        <div id="page2"></div>
+        <div id="page2">
+            <div id="page2-left"></div>
+            <div id="page2-right"></div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
