--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -115,8 +115,33 @@
             </div>
         </div>
         <div id="page2">
-            <div id="page2-left"></div>
-            <div id="page2-right"></div>
+            <div id="page2-left">
+                <p>Exclusive insight into <br> UI/UX and product design</p>
+                <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon ourselves to drop
+                some knowledge, share insights, let out insider tips, and put our work on full display</h5>
+            </div>
+            <div id="page2-right">
+                <div class="right-elem" id="right-elem1">
+                    <h2>The Gestalt Principles Of Design: How <br> Design Forms Visual Perception </h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/661e4ba6d5411419b36089ac_Img.webp"
+                        alt="The Gestalt principles of design, examples by Lazarev design agency." decoding="async" loading="eager">
+                </div>
+                <div class="right-elem">
+                    <h2>Effective Design Principles For<br>Cryptocurrency Trading Interfaces</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65e89f579288c53a9147c3cf_Cover%20Img.webp"
+                        alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65b1552616c544d74e5b6789_Cover3.webp"
+                        alt="">
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
