--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lazrev</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -117,30 +118,55 @@
         <div id="page2">
             <div id="page2-left">
                 <p>Exclusive insight into <br> UI/UX and product design</p>
-                <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon ourselves to drop
-                some knowledge, share insights, let out insider tips, and put our work on full display</h5>
+                <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon
+                    ourselves to drop
+                    some knowledge, share insights, let out insider tips, and put our work on full display</h5>
             </div>
             <div id="page2-right">
                 <div class="right-elem" id="right-elem1">
                     <h2>The Gestalt Principles Of Design: How <br> Design Forms Visual Perception </h2>
                     <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/661e4ba6d5411419b36089ac_Img.webp"
-                        alt="The Gestalt principles of design, examples by Lazarev design agency." decoding="async" loading="eager">
+                        alt="The Gestalt principles of design, examples by Lazarev design agency." decoding="async"
+                        loading="eager">
+                    <div class="part">
+                        <p>6 min Read</p>
+                        <i class="ri-arrow-right-up-line"></i>
+                    </div>
                 </div>
                 <div class="right-elem">
                     <h2>Effective Design Principles For<br>Cryptocurrency Trading Interfaces</h2>
-                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65e89f579288c53a9147c3cf_Cover%20Img.webp"
-                        alt="">
+                    <img
+                        src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65e89f579288c53a9147c3cf_Cover%20Img.webp">
+                    <div class="part">
+                        <p>3 min Read</p>
+                        <i class="ri-arrow-right-up-line"></i>
+                    </div>
                 </div>
                 <div class="right-elem">
                     <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
-                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
-                        alt="">
+                    <img
+                        src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp">
+                    <div class="part">
+                        <p>5 min Read</p>
+                        <i class="ri-arrow-right-up-line"></i>
+                    </div>
                 </div>
                 <div class="right-elem">
                     <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
-                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65b1552616c544d74e5b6789_Cover3.webp"
-                        alt="">
+                    <img
+                        src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65b1552616c544d74e5b6789_Cover3.webp">
+                    <div class="part">
+                        <p>5 min Read</p>
+                        <i class="ri-arrow-right-up-line"></i>
+                    </div>
                 </div>
+            </div>
+        </div>
+        <div id="page3">
+            <video src="https://lazarev.kiev.ua/la24/la-reel--min.mp4"></video>
+            <div class="page3-center">
+                <div class="icon"><i class="ri-play-fill"></i></i></div>
+                <h5>WATCH SHOWREEL</h5>
             </div>
         </div>
     </div>
