--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -169,6 +169,21 @@
                 <h5>WATCH SHOWREEL</h5>
             </div>
         </div>
+        <div id="page4">
+            <div id="page4-left">
+                <h2>Success Stories <br>Shaped by Our <br>User Experience <br>Design Agency</h2>
+            </div>
+            <div id="page4-right">
+                <h6>PARTNERSHIP MENTALITY</h6>
+                <p class="first-para">Along with taking the lead in designing AI-powered solutions, we embody a partnership mentality. This exact commitment
+                has been the bedrock of our clients’ successes. When you choose to collaborate with us, we promise to be right where
+                your audience's changing desires meet your ambitious business goals. We don't settle for mediocrity; we strive for
+                excellence in every Figma pixel, every touchpoint, and every UX interaction.</p>
+                <h6>RESULTS</h6>
+                <P>That is how we've built 50+ sustainable startup products and helped 400+ brands secure millions in funding, achieve
+                successful acquisitions, and establish themselves as globally recognized companies.</P>
+            </div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
