--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -184,6 +184,46 @@
                 successful acquisitions, and establish themselves as globally recognized companies.</P>
             </div>
         </div>
+        <div id="page5">
+            <div class="box-section">
+                <div class="box box1">
+                    <h1>$500M</h1>
+                    <p>in Funding secured owning to our designs</p>
+                    <p>/001</p>
+                </div>
+                <div class="box box2">
+                    <h1>+1million</h1>
+                    <p>Increase in customer base</p>
+                    <p>/002</p>
+                </div>
+                <div class="box box3">
+                    <h1>1000000+</h1>
+                    <p>Of active marketplace users</p>
+                    <p>/003</p>
+                </div>
+                <div class="box box4">
+                    <h1>25 million</h1>
+                    <p>Monthly E-commerce visits</p>
+                    <p>/004</p>
+                </div>
+                <div class="box box5">
+                    <h1>+300%</h1>
+                    <p>Increase in sign-up conversion rate</p>
+                    <p>/005</p>
+                </div>
+                <div class="box box6">
+                    <h1>+42%</h1>
+                    <p>Increase in the app's retention rate</p>
+                    <p>/006</p>
+                </div>
+            </div>
+        </div>
+        <div id="page6">
+            <p>featured digital <br> design projects</p>
+            <h1>Our portfolio encompasses a wide range <br> of digital designs essential for the growth <br>of modern businesses. From B2B SaaS
+            and B2C mobile apps to marketing design for promotions, we display our work created for early-stage startups and
+            enterprises at various stages of their growth.</h1>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
