--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -175,13 +175,17 @@
             </div>
             <div id="page4-right">
                 <h6>PARTNERSHIP MENTALITY</h6>
-                <p class="first-para">Along with taking the lead in designing AI-powered solutions, we embody a partnership mentality. This exact commitment
-                has been the bedrock of our clients’ successes. When you choose to collaborate with us, we promise to be right where
-                your audience's changing desires meet your ambitious business goals. We don't settle for mediocrity; we strive for
-                excellence in every Figma pixel, every touchpoint, and every UX interaction.</p>
+                <p class="first-para">Along with taking the lead in designing AI-powered solutions, we embody a
+                    partnership mentality. This exact commitment
+                    has been the bedrock of our clients’ successes. When you choose to collaborate with us, we promise
+                    to be right where
+                    your audience's changing desires meet your ambitious business goals. We don't settle for mediocrity;
+                    we strive for
+                    excellence in every Figma pixel, every touchpoint, and every UX interaction.</p>
                 <h6>RESULTS</h6>
-                <P>That is how we've built 50+ sustainable startup products and helped 400+ brands secure millions in funding, achieve
-                successful acquisitions, and establish themselves as globally recognized companies.</P>
+                <P>That is how we've built 50+ sustainable startup products and helped 400+ brands secure millions in
+                    funding, achieve
+                    successful acquisitions, and establish themselves as globally recognized companies.</P>
             </div>
         </div>
         <div id="page5">
@@ -220,15 +224,47 @@
         </div>
         <div id="page6">
             <p>featured digital <br> design projects</p>
-            <h1>Our portfolio encompasses a wide range <br> of digital designs essential for the growth <br>of modern businesses. From B2B SaaS
-            and B2C mobile apps to marketing design for promotions, we display our work created for early-stage startups and
-            enterprises at various stages of their growth.</h1>
+            <h1>
+                Our portfolio encompasses a wide range <br> of digital designs essential for the growth <br>of modern
+                businesses.
+                From B2B SaaS
+                and B2C mobile apps to marketing design for promotions, we display our work created for early-stage
+                startups and
+                enterprises at various
+                stages of their growth.
+            </h1>
         </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./script.js"></script>
+        <div id="page7">
+            <div class="section">
+                <div class="sec-left">
+                    <h2>Accern. Rhea</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit inventore enim, quos, qui est
+                        id, architecto libero in esse vel officiis repellat alias maxime minima.</p>
+                </div>
+                <div class="sec-right">
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65a93ac90b586168e5917ac8_Rhea%20-%20cover_horizontal_low.webp"
+                        alt="">
+                    <video muted src="./accern-rhea-cover-big.mp4"></video>
+                </div>
+            </div>
+            <div class="section">
+                <div class="sec-left">
+                    <h2>AfroTech</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit inventore enim, quos, qui est
+                        id, architecto libero in esse vel officiis repellat alias maxime minima.</p>
+                </div>
+                <div class="sec-right">
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65cb66041ce86ac3784aaba1_Afrotech%20-%20cover_horizontal.webp"
+                        alt="">
+                    <video muted src="https://lazarev.kiev.ua/cases/la24/afrotech-cover-big.mp4"></video>
+                </div>
+
+            </div>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+            integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="./script.js"></script>
 </body>
 
 </html>
