--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -237,14 +237,14 @@
         <div id="page7">
             <div class="section">
                 <div class="sec-left">
-                    <h2>Accern. Rhea</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit inventore enim, quos, qui est
-                        id, architecto libero in esse vel officiis repellat alias maxime minima.</p>
+                    <h2>NODO</h2>
+                    <p>A promo website for unique cinematography equipment. Inertia Wheels MAX –– the first-hand wheels developed to streamline
+                    the operating experience.</p>
                 </div>
                 <div class="sec-right">
-                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65a93ac90b586168e5917ac8_Rhea%20-%20cover_horizontal_low.webp"
+                    <img src="./adrev.webp"
                         alt="">
-                    <video muted src="./accern-rhea-cover-big.mp4"></video>
+                    <video muted src="./nodo-cover-big.mp4"></video>
                 </div>
             </div>
             <div class="section">
