--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -332,6 +332,9 @@
                 <video src="./green-video.mp4"></video>
             </div>
         </div>
+        <div id="page9header">
+                <h1>Digital Product <br> Design Services And <br> Solutions We Offer</h1>
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
             integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
