--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -335,6 +335,15 @@
         <div id="page9header">
                 <h1>Digital Product <br> Design Services And <br> Solutions We Offer</h1>
         </div>
+        <div id="page9">
+            <button>BECOME A CLIENT</button>
+            <!-- <i class="ri-arrow-right-up-line"></i> -->
+            <div id="page9-right">
+                <p>We lead your startup at every step of its growth, providing unparalleled personal service at every interaction. Whether
+                it's launching an MVP, revamping an existing product, securing funding with UI prototypes, increasing customer
+                engagement, or boosting conversions, we develop a suite of custom-tailored design services to fulfill your expectations.</p>
+            </div>
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
             integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
