--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -339,9 +339,18 @@
             <button>BECOME A CLIENT</button>
             <!-- <i class="ri-arrow-right-up-line"></i> -->
             <div id="page9-right">
-                <p>We lead your startup at every step of its growth, providing unparalleled personal service at every interaction. Whether
+                <p><span>Services</span>We lead your startup at every step of its <span></span>growth, providing unparalleled personal service at every interaction. Whether
                 it's launching an MVP, revamping an existing product, securing funding with UI prototypes, increasing customer
                 engagement, or boosting conversions, we develop a suite of custom-tailored design services to fulfill your expectations.</p>
+                <div id="page9-content">
+                    <h1>UI/UX Design</h1>
+                    <div id="flex">
+                        <h4>UX AUDIT</h4>
+                        <h4>UX DESIGN</h4>
+                        <h4>UI DESIGN</h4>
+                        <h4>UX RESEARCH</h4>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
