--- a/lazrev/index.html
+++ b/lazrev/index.html
@@ -350,6 +350,15 @@
                         <h4>UI DESIGN</h4>
                         <h4>UX RESEARCH</h4>
                     </div>
+                    <div id="page9-container">
+                        <div class="page9-elem">
+                            <h3>UX Research</h3>
+                            <p>Before making any design solutions, our team conducts UX research, leaving no stone unturned. This entails market
+                            analysis, competitor assessment, crystallizing your product positioning, and defining comprehensive feature lists.</p>
+                            <i class="ri-arrow-right-up-line"></i>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
